Upgrade to JDK 14 and Gradle 6.5